css/styles.css
/*--------------------
COLORS
--------------------*/
.color1-background {
  color: white;
  background: #CEEC97; }

.color2-background {
  color: white;
  background: #F4B393; }

.color3-background {
  background: #7A28CB; }

.color4-background {
  background: #494368;
  color: white; }

.color4-shadow-background {
  background: #332f49;
  color: white; }

.color5-background {
  background: #ff00b5; }

/*--------------------
DEFAULTS
--------------------*/
h1, h2, h3, h4, h5, h6 {
  margin-top: 0;
  margin-bottom: 20px; }

body {
  font-family: "Roboto";
  font-size: 1.8em;
  font-weight: 200;
  line-height: 1.5em; }

h1, h2, h3 {
  font-family: "Oswald";
  line-height: 1.3em;
  margin-bottom: 20px; }

h3 {
  font-weight: 200; }

h4 {
  font-weight: 200; }

input {
  width: 100%;
  color: black;
  padding: 10px;
  border-radius: 5px;
  border: none; }

/*--------------------
HIDING SHIT
--------------------*/
@media (max-width: 767px) {
  .tablet-up {
    display: none !important; } }
@media (min-width: 768px) {
  .tablet-up {
    display: block !important; } }
/*--------------------
NAV BAR
--------------------*/
header.navbar {
  background: rgba(0, 0, 0, 0.8); }
  header.navbar button {
    margin: 5px;
    font-size: 16px;
    height: 40px;
    padding: 5px 20px 5px 20px; }

.navbar-logo {
  height: 25px; }

.navbar-inverse .navbar-text {
  margin-top: 11px; }

/*--------------------
UNORGANIZED
--------------------*/
.bullet-info-area {
  margin-top: 50px;
  padding-left: 20px;
  padding-right: 20px;
  color: white;
  /*p {
      font-size: 24px;
  }
  
  li {
      font-size: 24px;
  }*/ }
  .bullet-info-area h2 {
    color: white;
    font-size: 36px; }
  @media (min-width: 1025px) {
    .bullet-info-area h2 {
      font-size: 40px; } }

@media (min-width: 768px) {
  .bullet-info-area {
    font-size: 20px; } }
.cta-area {
  background-color: rgba(218, 236, 246, 0.5);
  padding: 20px 20px;
  margin-top: 45px; }

.cta-headline {
  margin-top: 10px; }

.pre-cta {
  font-family: FuturaLT;
  text-align: center;
  font-size: 1.5em;
  margin-bottom: 15px; }

.urgency-statement {
  text-align: center;
  color: white;
  font-size: 19px;
  padding: 0px 10px; }
  .urgency-statement strong {
    font-size: 22px; }

/*--------------------
COLOR CLASSES
--------------------*/
.white {
  color: white; }

/*--------------------
HELPER CLASSES
--------------------*/
.center {
  text-align: center; }

.right {
  text-align: right; }

.pad {
  padding: 20px; }

.add-margin-bottom {
  margin-bottom: 40px; }

.pad-top-and-bottom {
  padding: 40px 0px 40px 0px; }

.flex-container {
  display: flex; }
  .flex-container .flex-vcenter {
    align-self: center; }

.no-pad {
  padding: 0px; }

.no-pad-top {
  padding-top: 0px; }

.no-pad-bottom {
  padding-bottom: 0px; }

.no-bottom {
  padding-bottom: 0;
  margin-bottom: 0; }

.half-pad-top {
  padding-top: 20px; }

button {
  position: relative;
  vertical-align: top;
  height: 60px;
  padding: 0px 30px 0px 30px;
  font-size: 22px;
  color: white;
  text-align: center;
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
  background: #ff00b5;
  border: 0;
  border-bottom: 2px solid #cc0091;
  cursor: pointer;
  -webkit-box-shadow: inset 0 -2px #cc0091;
  box-shadow: inset 0 -2px #cc0091;
  border-radius: 5px;
  margin: auto;
  margin-bottom: 20px;
  display: block; }
  button.inline {
    display: inline;
    margin: 0; }

button:active {
  top: 1px;
  outline: none;
  -webkit-box-shadow: none;
  box-shadow: none; }

/*--------------------
SPLASH SCREEN
--------------------*/
.splash {
  overflow: hidden;
  position: relative;
  background: none; }
  .splash .background {
    background: #7A28CB;
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -2;
    margin-left: -1px; }
    .splash .background video {
      position: absolute;
      min-width: 100%;
      min-height: 100%;
      z-index: -1000;
      overflow: hidden;
      border: none; }
  .splash .fader {
    width: 100%;
    height: 100%;
    background: black;
    opacity: 0.7;
    position: absolute;
    z-index: -1; }
  .splash .splash-text {
    max-width: 1000px;
    margin: auto; }
  .splash .call-to-action {
    padding: 0;
    max-width: 950px;
    margin: auto;
    display: flex; }
    .splash .call-to-action .sign-up {
      align-self: center; }
    .splash .call-to-action .vid-col {
      padding: 0; }

@media (min-width: 768px) {
  .splash {
    height: 635px; } }
.cta-email {
  margin-bottom: 15px; }

.cta-button {
  margin-top: 0;
  margin-bottom: 10px; }

.cta-button:hover {
  background-color: #ff33c4; }

.cta-alternative {
  text-align: center;
  display: block;
  margin: 0 auto;
  color: white; }

.cta-alternative:hover {
  color: #ff00b5; }

.cta-alternative:visited {
  color: white; }

.cta-alternative:visited:hover {
  color: #ff00b5; }

.cta-alternative:active {
  color: #ff33c4; }

.headline {
  text-align: center;
  color: white;
  font-size: 40px;
  padding-top: 50px; }

.supporting-statement {
  text-align: center;
  font-size: 34px;
  margin-bottom: 20px;
  color: white; }

.videoWrapper {
  position: relative;
  padding-bottom: 56.25%;
  /* 16:9 */
  height: 0; }

/*--------------------
POINTS
--------------------*/
.point-headline {
  margin-top: 30px;
  margin-bottom: 10px; }

.point-container {
  min-height: 100%; }
  .point-container .point-inner {
    margin: 10px; }
    .point-container .point-inner .point-box {
      padding: 10px;
      text-align: center; }
      .point-container .point-inner .point-box img {
        width: 100%;
        margin-top: 5px;
        margin-bottom: 15px; }
      .point-container .point-inner .point-box div {
        padding-top: 10px; }

.point-quote-area {
  margin-top: 40px;
  margin-bottom: 40px; }

.share-container {
  margin-bottom: 20px;
  text-align: center; }
  .share-container .stButton, .share-container stMainServices {
    height: inherit; }
  .share-container .stButton_gradient {
    height: inherit; }

.iceberg {
  position: relative;
  background-image: url(../img/iceberg-overlay.png);
  background-position: top center;
  background-size: cover;
  height: 1180px; }
  .iceberg .iceberg-bottom {
    bottom: 0px;
    position: absolute;
    width: 100%;
    margin: auto; }
  .iceberg a {
    color: white; }

.quote {
  font-size: 20px;
  font-weight: 200;
  line-height: 1.4em; }

@media (min-width: 768px) {
  .quote {
    font-size: 24px; } }
/*--------------------
SHARE
--------------------*/
.canada-area {
  padding-top: 20px;
  padding-bottom: 20px;
  position: relative;
  background-image: url(../img/canada_leaf.png);
  background-position: top center;
  background-size: cover;
  color: white; }
  .canada-area h1 {
    font-size: 30px;
    text-align: center; }
  .canada-area h2 {
    font-size: 24px;
    text-align: center; }

@media (min-width: 768px) {
  .canada-area {
    background-image: url(../img/canada.png);
    height: 350px;
    color: black; }
    .canada-area h1 {
      font-size: 36px; }
    .canada-area h2 {
      font-size: 30px; } }
.share-area {
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: #250C3D;
  color: white; }

.stButton .st-twitter-counter {
  padding-bottom: 20px !important; }

.stButton .stMainServices {
  padding-bottom: 20px !important; }

.stButton .st-facebook-counter {
  padding-bottom: 20px !important; }

/*--------------------
DONATION
--------------------*/
.donation-area {
  padding-top: 20px;
  padding-bottom: 20px; }

/*--------------------
FOOTER
--------------------*/
.bottom-logo {
  height: 28px;
  margin-top: 0px; }

.footer {
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: black;
  color: white;
  font-size: 14px;
  width: 100%; }
  .footer span {
    margin-top: 3px; }
  .footer a {
    color: #ff33c4; }
  .footer a:hover {
    color: #ff00b5; }
  .footer a:visited {
    color: #ff00b5; }

.footer-list {
  list-style-type: none; }
  .footer-list li {
    display: inline;
    margin-right: 10px; }

.sponsor {
  margin-left: 10px;
  display: inline;
  height: 40px; }

.sponsor-text {
  font-size: 13px;
  color: white; }

